# cookiecutter-pylib

./: .gitignore  LICENSE  README.rst  cookiecutter.json
{{cookiecutter.project_slug}}/: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  README.md  changelog.md  env.yml  mkdocs.yml  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/docs/: Makefile  index.md
{{cookiecutter.project_slug}}/docs/home/: intro.md
{{cookiecutter.project_slug}}/docs/releases/: changelog.md
{{cookiecutter.project_slug}}/docs/setup/: pip_installation.md
{{cookiecutter.project_slug}}/docs/source/: api.rst  conf.py  index.rst  {{cookiecutter.project_slug}}.module1.rst  {{cookiecutter.project_slug}}.module2.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: entry.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/module1/: __init__.py  base.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/module2/: __init__.py  mathtools.py
{{cookiecutter.project_slug}}/tests/test_{{cookiecutter.project_slug}}/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/tests/test_{{cookiecutter.project_slug}}/module1/: test_base.py
{{cookiecutter.project_slug}}/tests/test_{{cookiecutter.project_slug}}/module2/: test_math_funcs.py
